# OthelloAI

./: CMakeLists.txt  README.md  main.cpp
Alpha_Reversi/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  alpha_reversi  cmake_install.cmake  main.cpp
Alpha_Reversi/core/: network.cpp  network.h  reversi.cpp  reversi.h  timer.h  uct.cpp  uct.h
Reversi_python/: MCTS.py  data.py  data2.py  env.py  evaluation.py  test.py  util.py
Reversi_python/engines/: __init__.py  greedy.py  human.py
cpp/: MCTS.cpp  MCTS.h  autoPlay.cpp  autoPlay.h  board.cpp  board.h  configSetup.cpp  configure.cpp  configure.h  data.cpp  evaluation.cpp  evaluation.h  makefile  network.cpp  network.h  test.cpp  timer.h  updateData11.cpp  util.h
